docker file is update with the lastet version of httpd

--- a/car.html
+++ b/car.html
@@ -48,8 +48,9 @@
             </div>
             <div class="custom_menu-btn">
               <button onclick="openNav()">
-                <span class="s-1"> </span>
-                <span class="s-2"> </span>
+                <div class="custom_menu-btn">
+                  <button onclick="openNav()">
+              
                 <span class="s-3"> </span>
               </button>
             </div>
