--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+<meta charset="utf-8886-ggvdc />
 
   <title>Rent4u</title>
 
